--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,13 @@ dependencies:
   go_router: ^9.0.3
   get_it: ^7.6.0
   retrofit: ^4.0.1
-  retrofit_generator: ^7.0.8
   freezed: ^2.3.5
   freezed_annotation: ^2.2.0
   flutter_bloc: ^8.1.3
+  fpdart: ^0.6.0
+  dio: ^5.2.1+1
+  flutter_dotenv: ^5.1.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +35,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
+  retrofit_generator: ^7.0.8
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,6 +53,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
