--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   dio: ^5.2.1+1
   flutter_dotenv: ^5.1.0
   cached_network_image: ^3.2.3
+  infinite_scroll_pagination: ^3.2.0
 
 dev_dependencies:
   flutter_test:
