--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   flutter_dotenv: ^5.1.0
   cached_network_image: ^3.2.3
   infinite_scroll_pagination: ^3.2.0
+  mocktail: ^0.3.0
+  network_image_mock: ^2.1.1
+  patrol: ^2.0.4
+  http_mock_adapter: ^0.4.4
+  bloc_test: ^9.1.3
 
 dev_dependencies:
   flutter_test:
