--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: movies
-description: A new Flutter project.
+description: Movies app - Flutter magic with TheMovieDB API - BLoC, Retrofit, and more in one sleek app.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -25,7 +25,6 @@ dependencies:
   flutter_bloc: ^8.1.3
   fpdart: ^0.6.0
   dio: ^5.2.1+1
-  flutter_dotenv: ^5.1.0
   cached_network_image: ^3.2.3
   infinite_scroll_pagination: ^3.2.0
   mocktail: ^0.3.0
